# otus_algo_hw

./: CMakeLists.txt  README.md  otus_algo_hw_01.cpp  otus_algo_hw_02.cpp
.github/: otus_algo_hw_01_cmake.yml
.github/workflows/: cmake.yml  otus_algo_hw_01_cmake.yml  otus_algo_hw_02_cmake.yml  otus_algo_hw_02_rust.yml
otus_algo_hw_01/: CMakeLists.txt  otus_algo_hw_01.cpp
otus_algo_hw_01/.github/workflows/: cmake.yml
otus_algo_hw_02/: CMakeLists.txt  Cargo.toml  LICENSE
otus_algo_hw_02/test/: test_all.cpp
