[package]
name = "otus_algo_hw_02"
version = "0.1.0"
# edition = "2024"

[profile.dev]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[package.metadata.deb]
maintainer = "Dmitry Lozovoy <8333184@gmail.com>"
copyright = "2025, Dmitry Lozovoy <8333184@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "Happy tickets counts"
depends = "$auto"
section = "utility"
priority = "optional"
# assets = [
#     # both syntaxes are equivalent:
#     ["target/release/cargo-deb", "usr/bin/", "755"],
#     { source = "README.md", dest = "usr/share/doc/cargo-deb/README", mode = "644"},
# ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
